--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "gatsby-starter-default",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Subscribe today and get the lastest health offers, wealth offers, and relationship offers",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Get Best Offers <info@getbestoffers.com>",
   "dependencies": {
     "gatsby": "^2.0.76",
+    "gatsby-background-image": "^0.2.3",
     "gatsby-image": "^2.0.20",
+    "gatsby-plugin-facebook-pixel": "^1.0.3",
     "gatsby-plugin-manifest": "^2.0.9",
     "gatsby-plugin-offline": "^2.0.16",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sharp": "^2.0.14",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-transformer-sharp": "^2.1.8",
     "prop-types": "^15.6.2",
@@ -27,7 +30,7 @@
     "develop": "gatsby develop",
     "start": "npm run develop",
     "format": "prettier --write \"src/**/*.js\"",
-    "deploy": "gatsby build --prefix-paths && cp ./src/CNAME public/ && cp ./src/manifest.json public/ && cp ./src/pushcrew-sw.js public/ && cp ./src/logo_192_by_192.png public/ && gh-pages -d public",
+    "deploy": "gatsby build --prefix-paths && cp ./src/CNAME public/ && gh-pages -d public",
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "devDependencies": {
